--- a/00-Pytorch Basics/basic.ipynb
+++ b/00-Pytorch Basics/basic.ipynb
@@ -521,7 +521,7 @@
     "        self.conv1 = nn.Conv2d(3, 10, 3)\n",
     "        # 具体每种层的参数可以去查看文档\n",
     "        \n",
-    "    def forward(x):\n",
+    "    def forward(self, x):\n",
     "        # 定义向前传播\n",
     "        out = self.conv1(x)\n",
     "        return out"
